--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.2",
-    "nodemon": "^2.0.9",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.9"
   }
 }
